# PracticeRaptor

./: .gitignore  README.md
practiceraptor/: README.md  pyproject.toml
practiceraptor/adapters/executors/: __init__.py  local_executor.py
practiceraptor/adapters/storage/: __init__.py  json_base.py  json_draft_repository.py  json_problem_repository.py  json_progress_repository.py  json_submission_repository.py  json_user_repository.py
practiceraptor/clients/cli/: presenter.py
practiceraptor/config/: config.example.yaml  config.test.yaml
practiceraptor/core/domain/: __init__.py  enums.py  errors.py  factories.py  result.py
practiceraptor/core/ports/: __init__.py  auth.py  executors.py  repositories.py
practiceraptor/docker/: Dockerfile.test  docker-compose.test.yml
practiceraptor/tests/: conftest.py
practiceraptor/tests/fixtures/: factories.py
practiceraptor/tests/integration/: test_solve_problem_flow.py
practiceraptor/tests/unit/adapters/executors/: test_local_executor.py
practiceraptor/tests/unit/adapters/storage/: test_json_base.py  test_json_draft_repository.py  test_json_problem_repository.py  test_json_progress_repository.py  test_json_submission_repository.py  test_json_user_repository.py
practiceraptor/tests/unit/clients/cli/: test_app.py  test_input_handler.py  test_presenter.py
practiceraptor/tests/unit/core/domain/: test_enums.py  test_errors.py  test_result.py
practiceraptor/tests/unit/core/ports/: test_protocols.py
proposals/: design.md  functional_requirements.md  persistence_layer.md  roadmap.md  technical_requirements.md
(+160 files in other folders)
